# mr-newbial

./: .gitignore  config.yml  pyproject.toml
.github/workflows/: lint.yml
newbial/: __main__.py
newbial/core/: bot.py
newbial/core/events/: __init__.py  base_event.py  error_event.py  module_events.py  ready_event.py
newbial/core/managers/: __init__.py  event_manager.py  ipc_manager.py  module_manager.py  state_manager.py  task_manager.py
newbial/core/structures/: __init__.py  command.py  context.py  module.py
newbial/core/utils/: __init__.py  config.py  helpers.py  logging.py
newbial/modules/: core.py
newbial/slack/clients/: __init__.py  socket_client.py  web_client.py
newbial/slack/events/: __init__.py  base_event.py  message_events.py
newbial/slack/structures/: __init__.py  message.py  user.py
newbial/types/: config.py  core.py  events.py
